AUTOMAKE_OPTIONS = foreign

L7VS_INCLUDEDIR = @l7vs_includedir@

install:
	install -c -m 644 -D ./protocol_module_base.h ${L7VS_INCLUDEDIR}/protocol_module_base.h
	install -c -m 644 -D ./schedule_module_base.h ${L7VS_INCLUDEDIR}/schedule_module_base.h
	install -c -m 644 -D ./module_base.h ${L7VS_INCLUDEDIR}/module_base.h
	install -c -m 644 -D ./utility.h ${L7VS_INCLUDEDIR}/utility.h
	install -c -m 644 -D ./logger.h ${L7VS_INCLUDEDIR}/logger.h
	install -c -m 644 -D ./logger_enum.h ${L7VS_INCLUDEDIR}/logger_enum.h
	install -c -m 644 -D ./trapmessage.h ${L7VS_INCLUDEDIR}/trapmessage.h
	install -c -m 644 -D ./error_code.h ${L7VS_INCLUDEDIR}/error_code.h
	install -c -m 644 -D ./atomic.h ${L7VS_INCLUDEDIR}/atomic.h
	install -c -m 644 -D ./wrlock.h ${L7VS_INCLUDEDIR}/wrlock.h
	install -c -m 644 -D ./replication.h ${L7VS_INCLUDEDIR}/replication.h
	install -c -m 644 -D ./realserver.h ${L7VS_INCLUDEDIR}/realserver.h
	install -c -m 644 -D ./realserver_element.h ${L7VS_INCLUDEDIR}/realserver_element.h
	install -c -m 644 -D ./endpoint.h ${L7VS_INCLUDEDIR}/endpoint.h
